# hrl_control

./: DroneDockerfile  Jenkinsfile_drone  Jenkinsfile_sim  README.md  SimulatorDockerfile
Utilities/: .env  bag-manager.py  config_env.py  helpful_commands  swap_internets.sh
Utilities/network_configs/NU-IoT/agent-1/: 50-cloud-init.yaml
Utilities/network_configs/NU-IoT/agent-14/: 50-cloud-init.yaml
Utilities/network_configs/NU-IoT/agent-4/: 50-cloud-init.yaml
Utilities/network_configs/NU-IoT/agent-6/: 50-cloud-init.yaml
Utilities/network_configs/NU-IoT/agent-7/: 50-cloud-init.yaml
Utilities/network_configs/NU-IoT/agent-9/: 50-cloud-init.yaml
Utilities/network_configs/hipark/: 50-cloud-init.yaml
docker/development/: Dockerfile
docker/drone/: .env  Dockerfile  bag_manager.sh  docker-compose.yml  ros_entrypoint.sh
docker/drone/scripts/: start.sh
params/: CRITICAL_PARAMETERS.param
swarm-nodes/altitude_controller/: CMakeLists.txt  package.xml
swarm-nodes/altitude_controller/launch/: altitude_control.launch
swarm-nodes/altitude_controller/src/: altitude_controller.cpp
swarm-nodes/bag_handler/: CMakeLists.txt  package.xml
swarm-nodes/bag_handler/scripts/: bag_handler.py
swarm-nodes/clustering_control/: CMakeLists.txt  package.xml
swarm-nodes/clustering_control/include/: clustering.h
swarm-nodes/clustering_control/launch/: clustering_control_container.launch  clustering_control_host.launch  clustering_control_sim.launch
swarm-nodes/clustering_control/src/: .env  CMakeLists.txt  HRL_Sys_2_1.json  HRL_Sys_2_2.json  HRL_Sys_3_2.json  HRL_Sys_3_2_3.json  HRL_Sys_3_3.json  HRL_Sys_4_3.json  HRL_Sys_4_3_3.json  HRL_Sys_4_4.json  HRL_Sys_4_4_4.json  clustering_control.cpp
swarm-nodes/clustering_control/tst/: CMakeLists.txt  flight_mode_test.cpp  parse_test.cpp
swarm-nodes/command_xform/: CMakeLists.txt  package.xml
swarm-nodes/command_xform/include/command_xform/: command_xform.h
swarm-nodes/command_xform/src/: command_xform.cpp
swarm-nodes/custom_libs/: CMakeLists.txt  package.xml
swarm-nodes/custom_libs/include/custom_libs/: geo_converter.hpp  id_to_idx.hpp  json_reader.hpp
swarm-nodes/custom_libs/src/: geo_converter.cpp  id_to_idx.cpp  json_reader.cpp
swarm-nodes/estimator/: CMakeLists.txt  package.xml
swarm-nodes/estimator/src/: estimator.cpp
swarm-nodes/hrl_command_interpret/: CMakeLists.txt  package.xml
swarm-nodes/hrl_command_interpret/include/hrl_command_interpret/: hrl_command_interpret.h
swarm-nodes/hrl_command_interpret/src/: hrl_command_interpret.cpp
swarm-nodes/hrl_control/: CMakeLists.txt  package.xml
swarm-nodes/hrl_control/include/hrl_control/: hrl_control.h
swarm-nodes/hrl_control/launch/: hrl_control.launch
swarm-nodes/hrl_control/src/: HRL_Sys.json  HRL_Sys_1_1.json  HRL_sys_gain_schedule.json  hrl_control.cpp
swarm-nodes/hrl_lqi/: CMakeLists.txt  package.xml
swarm-nodes/hrl_lqi/src/: hrl_control.cpp  state-matrix.json
swarm-nodes/hrl_planner/: CMakeLists.txt  package.xml
swarm-nodes/hrl_planner/include/: hrl_planner.h
swarm-nodes/hrl_planner/src/: hrl_planner.cpp  state_conditioning.cpp
swarm-nodes/hrl_planner/src/test/: HRL.json
swarm-nodes/lqr_control/: CMakeLists.txt  package.xml
swarm-nodes/lqr_control/launch/: lqr_control.launch
swarm-nodes/lqr_control/src/: lqr_control.cpp
swarm-nodes/observer/: CMakeLists.txt  package.xml
swarm-nodes/observer/src/: observer.cpp
swarm-nodes/pre-planned_arl/: CMakeLists.txt  package.xml
swarm-nodes/pre-planned_arl/launch/: pre_planned.launch  pre_planned_cube.launch  pre_planned_cube_pi.launch  pre_planned_cube_test.launch
swarm-nodes/pre-planned_arl/src/: pre_planned_arl_cube.cpp  trajectory1.txt  trajectory2.txt  trajectory3.txt  trajectory4.txt  trajectory5.txt  trajectory6.txt  trajectory7.txt  trajectory8.txt  trajectoryTest.txt
swarm-nodes/state_provider/: CMakeLists.txt  package.xml
swarm-nodes/state_provider/include/state_provider/: state_provider.h
swarm-nodes/state_provider/src/: state_provider.cpp
swarm-nodes/swarm_comms/: CMakeLists.txt  package.xml
swarm-nodes/swarm_comms/launch/: .swarm_comms_sim.launch.un~  example_mavros_custom_node_launch.launch  swarm_comms.launch  swarm_comms_mavros.launch  swarm_comms_sim.launch  swarm_comms_sim.launch~
swarm-nodes/swarm_comms/msg/: .agentPos.msg.un~  agentPos.msg  agentPos.msg~  agentPosStamped.msg  allAgentsPosStamped.msg
swarm-nodes/swarm_comms/scripts/: .swarm_comm.py.un~  agent.py  swarm_comm.py  swarm_comm.py~
swarm-nodes/swarm_msgs/: CMakeLists.txt  package.xml
swarm-nodes/swarm_msgs/msg/: gps.msg  state.msg
